extends PanelContainer

@onready var inventory_11: Button = $MarginContainer/VBoxContainer/TopRow/Hotbar11
@onready var inventory_icon_11: TextureRect = $MarginContainer/VBoxContainer/TopRow/Hotbar11/HotbarIcon11
@onready var inventory_label_11: Label = $MarginContainer/VBoxContainer/TopRow/Hotbar11/HotbarLabel11
@onready var inventory_21: Button = $MarginContainer/VBoxContainer/TopRow/Hotbar21
@onready var inventory_icon_21: TextureRect = $MarginContainer/VBoxContainer/TopRow/Hotbar21/HotbarIcon21
@onready var inventory_label_21: Label = $MarginContainer/VBoxContainer/TopRow/Hotbar21/HotbarLabel21
@onready var inventory_31: Button = $MarginContainer/VBoxContainer/TopRow/Hotbar31
@onready var inventory_icon_31: TextureRect = $MarginContainer/VBoxContainer/TopRow/Hotbar31/HotbarIcon31
@onready var inventory_label_31: Label = $MarginContainer/VBoxContainer/TopRow/Hotbar31/HotbarLabel31
@onready var inventory_41: Button = $MarginContainer/VBoxContainer/TopRow/Hotbar41
@onready var inventory_icon_41: TextureRect = $MarginContainer/VBoxContainer/TopRow/Hotbar41/HotbarIcon41
@onready var inventory_label_41: Label = $MarginContainer/VBoxContainer/TopRow/Hotbar41/HotbarLabel41
@onready var inventory_51: Button = $MarginContainer/VBoxContainer/TopRow/Hotbar51
@onready var inventory_icon_51: TextureRect = $MarginContainer/VBoxContainer/TopRow/Hotbar51/HotbarIcon51
@onready var inventory_label_51: Label = $MarginContainer/VBoxContainer/TopRow/Hotbar51/HotbarLabel51
@onready var inventory_61: Button = $MarginContainer/VBoxContainer/TopRow/Hotbar61
@onready var inventory_icon_61: TextureRect = $MarginContainer/VBoxContainer/TopRow/Hotbar61/HotbarIcon61
@onready var inventory_label_61: Label = $MarginContainer/VBoxContainer/TopRow/Hotbar61/HotbarLabel61
@onready var inventory_71: Button = $MarginContainer/VBoxContainer/TopRow/Hotbar71
@onready var inventory_icon_71: TextureRect = $MarginContainer/VBoxContainer/TopRow/Hotbar71/HotbarIcon71
@onready var inventory_label_71: Label = $MarginContainer/VBoxContainer/TopRow/Hotbar71/HotbarLabel71
@onready var inventory_81: Button = $MarginContainer/VBoxContainer/TopRow/Hotbar81
@onready var inventory_icon_81: TextureRect = $MarginContainer/VBoxContainer/TopRow/Hotbar81/HotbarIcon81
@onready var inventory_label_81: Label = $MarginContainer/VBoxContainer/TopRow/Hotbar81/HotbarLabel81
@onready var inventory_91: Button = $MarginContainer/VBoxContainer/TopRow/Hotbar91
@onready var inventory_icon_91: TextureRect = $MarginContainer/VBoxContainer/TopRow/Hotbar91/HotbarIcon91
@onready var inventory_label_91: Label = $MarginContainer/VBoxContainer/TopRow/Hotbar91/HotbarLabel91
@onready var inventory_12: Button = $MarginContainer/VBoxContainer/MidRow/Hotbar12
@onready var inventory_icon_12: TextureRect = $MarginContainer/VBoxContainer/MidRow/Hotbar12/HotbarIcon12
@onready var inventory_label_12: Label = $MarginContainer/VBoxContainer/MidRow/Hotbar12/HotbarLabel12
@onready var inventory_22: Button = $MarginContainer/VBoxContainer/MidRow/Hotbar22
@onready var inventory_icon_22: TextureRect = $MarginContainer/VBoxContainer/MidRow/Hotbar22/HotbarIcon22
@onready var inventory_label_22: Label = $MarginContainer/VBoxContainer/MidRow/Hotbar22/HotbarLabel22
@onready var inventory_32: Button = $MarginContainer/VBoxContainer/MidRow/Hotbar32
@onready var inventory_icon_32: TextureRect = $MarginContainer/VBoxContainer/MidRow/Hotbar32/HotbarIcon32
@onready var inventory_label_32: Label = $MarginContainer/VBoxContainer/MidRow/Hotbar32/HotbarLabel32
@onready var inventory_42: Button = $MarginContainer/VBoxContainer/MidRow/Hotbar42
@onready var inventory_icon_42: TextureRect = $MarginContainer/VBoxContainer/MidRow/Hotbar42/HotbarIcon42
@onready var inventory_label_42: Label = $MarginContainer/VBoxContainer/MidRow/Hotbar42/HotbarLabel42
@onready var inventory_52: Button = $MarginContainer/VBoxContainer/MidRow/Hotbar52
@onready var inventory_icon_52: TextureRect = $MarginContainer/VBoxContainer/MidRow/Hotbar52/HotbarIcon52
@onready var inventory_label_52: Label = $MarginContainer/VBoxContainer/MidRow/Hotbar52/HotbarLabel52
@onready var inventory_62: Button = $MarginContainer/VBoxContainer/MidRow/Hotbar62
@onready var inventory_icon_62: TextureRect = $MarginContainer/VBoxContainer/MidRow/Hotbar62/HotbarIcon62
@onready var inventory_label_62: Label = $MarginContainer/VBoxContainer/MidRow/Hotbar62/HotbarLabel62
@onready var inventory_72: Button = $MarginContainer/VBoxContainer/MidRow/Hotbar72
@onready var inventory_icon_72: TextureRect = $MarginContainer/VBoxContainer/MidRow/Hotbar72/HotbarIcon72
@onready var inventory_label_72: Label = $MarginContainer/VBoxContainer/MidRow/Hotbar72/HotbarLabel72
@onready var inventory_82: Button = $MarginContainer/VBoxContainer/MidRow/Hotbar82
@onready var inventory_icon_82: TextureRect = $MarginContainer/VBoxContainer/MidRow/Hotbar82/HotbarIcon82
@onready var inventory_label_82: Label = $MarginContainer/VBoxContainer/MidRow/Hotbar82/HotbarLabel82
@onready var inventory_92: Button = $MarginContainer/VBoxContainer/MidRow/Hotbar92
@onready var inventory_icon_92: TextureRect = $MarginContainer/VBoxContainer/MidRow/Hotbar92/HotbarIcon92
@onready var inventory_label_92: Label = $MarginContainer/VBoxContainer/MidRow/Hotbar92/HotbarLabel92
@onready var inventory_13: Button = $MarginContainer/VBoxContainer/BotRow/Hotbar13
@onready var inventory_icon_13: TextureRect = $MarginContainer/VBoxContainer/BotRow/Hotbar13/HotbarIcon13
@onready var inventory_label_13: Label = $MarginContainer/VBoxContainer/BotRow/Hotbar13/HotbarLabel13
@onready var inventory_23: Button = $MarginContainer/VBoxContainer/BotRow/Hotbar23
@onready var inventory_icon_23: TextureRect = $MarginContainer/VBoxContainer/BotRow/Hotbar23/HotbarIcon23
@onready var inventory_label_23: Label = $MarginContainer/VBoxContainer/BotRow/Hotbar23/HotbarLabel23
@onready var inventory_33: Button = $MarginContainer/VBoxContainer/BotRow/Hotbar33
@onready var inventory_icon_33: TextureRect = $MarginContainer/VBoxContainer/BotRow/Hotbar33/HotbarIcon33
@onready var inventory_label_33: Label = $MarginContainer/VBoxContainer/BotRow/Hotbar33/HotbarLabel33
@onready var inventory_43: Button = $MarginContainer/VBoxContainer/BotRow/Hotbar43
@onready var inventory_icon_43: TextureRect = $MarginContainer/VBoxContainer/BotRow/Hotbar43/HotbarIcon43
@onready var inventory_label_43: Label = $MarginContainer/VBoxContainer/BotRow/Hotbar43/HotbarLabel43
@onready var inventory_53: Button = $MarginContainer/VBoxContainer/BotRow/Hotbar53
@onready var inventory_icon_53: TextureRect = $MarginContainer/VBoxContainer/BotRow/Hotbar53/HotbarIcon53
@onready var inventory_label_53: Label = $MarginContainer/VBoxContainer/BotRow/Hotbar53/HotbarLabel53
@onready var inventory_63: Button = $MarginContainer/VBoxContainer/BotRow/Hotbar63
@onready var inventory_icon_63: TextureRect = $MarginContainer/VBoxContainer/BotRow/Hotbar63/HotbarIcon63
@onready var inventory_label_63: Label = $MarginContainer/VBoxContainer/BotRow/Hotbar63/HotbarLabel63
@onready var inventory_73: Button = $MarginContainer/VBoxContainer/BotRow/Hotbar73
@onready var inventory_icon_73: TextureRect = $MarginContainer/VBoxContainer/BotRow/Hotbar73/HotbarIcon73
@onready var inventory_label_73: Label = $MarginContainer/VBoxContainer/BotRow/Hotbar73/HotbarLabel73
@onready var inventory_83: Button = $MarginContainer/VBoxContainer/BotRow/Hotbar83
@onready var inventory_icon_83: TextureRect = $MarginContainer/VBoxContainer/BotRow/Hotbar83/HotbarIcon83
@onready var inventory_label_83: Label = $MarginContainer/VBoxContainer/BotRow/Hotbar83/HotbarLabel83
@onready var inventory_93: Button = $MarginContainer/VBoxContainer/BotRow/Hotbar93
@onready var inventory_icon_93: TextureRect = $MarginContainer/VBoxContainer/BotRow/Hotbar93/HotbarIcon93
@onready var inventory_label_93: Label = $MarginContainer/VBoxContainer/BotRow/Hotbar93/HotbarLabel93


var inventory_cells: Array[Array]
var inventory_icons: Array[Array]
var inventory_labels: Array[Array]

var inventory_cells_1: Array[Button]
var inventory_cells_2: Array[Button]
var inventory_cells_3: Array[Button]
var inventory_icons_1: Array[TextureRect]
var inventory_icons_2: Array[TextureRect]
var inventory_icons_3: Array[TextureRect]
var inventory_labels_1: Array[Label]
var inventory_labels_2: Array[Label]
var inventory_labels_3: Array[Label]


func _ready() -> void:
	inventory_cells_1.append(inventory_11)
	inventory_cells_1.append(inventory_21)
	inventory_cells_1.append(inventory_31)
	inventory_cells_1.append(inventory_41)
	inventory_cells_1.append(inventory_51)
	inventory_cells_1.append(inventory_61)
	inventory_cells_1.append(inventory_61)
	inventory_cells_1.append(inventory_81)
	inventory_cells_1.append(inventory_91)
	
	inventory_icons_1.append(inventory_icon_11)
	inventory_icons_1.append(inventory_icon_21)
	inventory_icons_1.append(inventory_icon_31)
	inventory_icons_1.append(inventory_icon_41)
	inventory_icons_1.append(inventory_icon_51)
	inventory_icons_1.append(inventory_icon_61)
	inventory_icons_1.append(inventory_icon_71)
	inventory_icons_1.append(inventory_icon_81)
	inventory_icons_1.append(inventory_icon_91)
	
	inventory_labels_1.append(inventory_label_11)
	inventory_labels_1.append(inventory_label_21)
	inventory_labels_1.append(inventory_label_31)
	inventory_labels_1.append(inventory_label_41)
	inventory_labels_1.append(inventory_label_51)
	inventory_labels_1.append(inventory_label_61)
	inventory_labels_1.append(inventory_label_71)
	inventory_labels_1.append(inventory_label_81)
	inventory_labels_1.append(inventory_label_91)
	
	inventory_cells_2.append(inventory_12)
	inventory_cells_2.append(inventory_22)
	inventory_cells_2.append(inventory_32)
	inventory_cells_2.append(inventory_42)
	inventory_cells_2.append(inventory_52)
	inventory_cells_2.append(inventory_62)
	inventory_cells_2.append(inventory_62)
	inventory_cells_2.append(inventory_82)
	inventory_cells_2.append(inventory_92)
	
	inventory_icons_2.append(inventory_icon_12)
	inventory_icons_2.append(inventory_icon_22)
	inventory_icons_2.append(inventory_icon_32)
	inventory_icons_2.append(inventory_icon_42)
	inventory_icons_2.append(inventory_icon_52)
	inventory_icons_2.append(inventory_icon_62)
	inventory_icons_2.append(inventory_icon_72)
	inventory_icons_2.append(inventory_icon_82)
	inventory_icons_2.append(inventory_icon_92)
	
	inventory_labels_2.append(inventory_label_12)
	inventory_labels_2.append(inventory_label_22)
	inventory_labels_2.append(inventory_label_32)
	inventory_labels_2.append(inventory_label_42)
	inventory_labels_2.append(inventory_label_52)
	inventory_labels_2.append(inventory_label_62)
	inventory_labels_2.append(inventory_label_72)
	inventory_labels_2.append(inventory_label_82)
	inventory_labels_2.append(inventory_label_92)
	
	inventory_cells_3.append(inventory_13)
	inventory_cells_3.append(inventory_23)
	inventory_cells_3.append(inventory_33)
	inventory_cells_3.append(inventory_43)
	inventory_cells_3.append(inventory_53)
	inventory_cells_3.append(inventory_63)
	inventory_cells_3.append(inventory_63)
	inventory_cells_3.append(inventory_83)
	inventory_cells_3.append(inventory_93)
	
	inventory_icons_3.append(inventory_icon_13)
	inventory_icons_3.append(inventory_icon_23)
	inventory_icons_3.append(inventory_icon_33)
	inventory_icons_3.append(inventory_icon_43)
	inventory_icons_3.append(inventory_icon_53)
	inventory_icons_3.append(inventory_icon_63)
	inventory_icons_3.append(inventory_icon_73)
	inventory_icons_3.append(inventory_icon_83)
	inventory_icons_3.append(inventory_icon_93)
	
	inventory_labels_3.append(inventory_label_13)
	inventory_labels_3.append(inventory_label_23)
	inventory_labels_3.append(inventory_label_33)
	inventory_labels_3.append(inventory_label_43)
	inventory_labels_3.append(inventory_label_53)
	inventory_labels_3.append(inventory_label_63)
	inventory_labels_3.append(inventory_label_73)
	inventory_labels_3.append(inventory_label_83)
	inventory_labels_3.append(inventory_label_93)
	
	inventory_cells.append(inventory_cells_1)
	inventory_cells.append(inventory_cells_2)
	inventory_cells.append(inventory_cells_3)
	
	inventory_icons.append(inventory_icons_1)
	inventory_icons.append(inventory_icons_2)
	inventory_icons.append(inventory_icons_3)
	
	inventory_labels.append(inventory_labels_1)
	inventory_labels.append(inventory_labels_2)
	inventory_labels.append(inventory_labels_3)
	

func on_inventory_changed() -> void:
	pass
	#var infos: Array[ItemSlotInformation] = InventoryManager.get_hotbar_infos()
	
	#for i in range(InventoryManager.hotbar_length):
				
		#if infos[i].name != "none":
		#	hotbar_icons[i].texture = infos[i].image
		#	if infos[i].stackable:
		#		hotbar_labels[i].text = "x" + str(infos[i].amount)
		#	else:
		#		hotbar_labels[i].text = ""
		#else:
		#	hotbar_icons[i].texture = null
		#	hotbar_labels[i].text = ""
